--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "tsc",
     "start": "tsc --watch & nodemon dist",
     "test": "tsc && mocha dist/**/*.spec.js",
-    "lint": "eslint src --ext ts",
-    "tsc": "tsc"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "tsc": "tsc",
+    "eslint-init": "eslint --init"
   },
   "keywords": [],
   "author": "dasaco",
@@ -16,13 +17,14 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "1.19.1",
+    "pg": "^7.4.3",
     "ts-node": "^8.3.0",
     "tsc": "^1.20150623.0",
-    "typeorm": "^0.2.18",
-    "pg": "^7.4.3"
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@types/async": "^3.0.1",
@@ -32,11 +34,14 @@
     "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "6.0.1",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-plugin-import": "2.18.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "4.2.1",
     "mocha": "6.1.4",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.2",
     "typescript-eslint-parser": "22.0.0"
   }
