--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
   "devDependencies": {
     "@types/async": "^3.0.1",
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.2.4",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
