--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "types": ["node"],
     "experimentalDecorators": true,
     "module": "commonjs",
